--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/olBrbfwi'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://postings.com/21758/jobs/construction-extraction/project-manager-owners-rep-for-developer-55-communities-spring-tx-77381/84015'>
+Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom Executive Search, by John Barto
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/olBrbfwi'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/reputation/56cbb736-c6f8-477c-959f-883d4bb4b0b3'>Reputation.com - Program Manager</a></h5> 
@@ -96,7 +106,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rationalconsulting/jobs/4503246002'>Job Application for Blog Project Manager at Rational</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rationalconsulting/jobs/4503246002'>Job Application for Blog Project Manager at Rational</a></h5> 
 <p><span class="badge badge-light">Bellevue</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -180,7 +190,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -188,7 +198,7 @@
 <p><span class="badge badge-light">United States  Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nmhc.referrals.selectminds.com/jobs/project-manager-ii-epmo-full-time-days-33405'>Project Manager II-ePMO, Full-Time, Days - Northwestern Medicine Careers</a></h5> 
+<h5><a href='https://nmhc.referrals.selectminds.com/jobs/project-manager-ii-epmo-full-time-days-33405'>Project Manager II-ePMO, Full-Time, Days - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -200,13 +210,13 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://spotlab.recruitee.com/o/clinical-project-manager-madrid'>
+<h5><a href='https://spotlab.recruitee.com/o/clinical-project-manager-madrid'>
       Clinical Project Manager - SpotLab
     </a></h5> 
 <p><span class="badge badge-light">Madrid, Spain  Madrid</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nasuni/job/omDrbfwl'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nasuni/job/omDrbfwl'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -226,7 +236,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -258,7 +268,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378559-project-manager-with-german'>zooplus Project Manager with German | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378559-project-manager-with-german'>zooplus Project Manager with German | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -288,7 +298,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698580770-junior-project-manager-financial-systems-d-m-w-'>Auto1 Junior Project Manager Financial Systems (d/m/w) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698580770-junior-project-manager-financial-systems-d-m-w-'>Auto1 Junior Project Manager Financial Systems (d/m/w) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -348,7 +358,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Project-Manager-m-f-Division-Professional-Services.323071275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Project Manager (m/f) Division Professional Services | Wirecard Technologies GmbH | Job</a></h5> 
+<h5><a href='https://jobs.jobware.net/Job/Project-Manager-m-f-Division-Professional-Services.323071275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Project Manager (m/f) Division Professional Services | Wirecard Technologies GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -356,7 +366,7 @@
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AnalygenceInc/743999698566905-program-manager-army-recruiting-resources-command'>Analygence, Inc. Program Manager - ARMY Recruiting Resources Command | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AnalygenceInc/743999698566905-program-manager-army-recruiting-resources-command'>Analygence, Inc. Program Manager - ARMY Recruiting Resources Command | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -380,7 +390,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -434,14 +444,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ooITafwT&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nkYppMwn'>ServiceNow Careers - Senior IT Program Manager - Front office applications</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e496096'>Stellenangebot: Junior Project Manager (m/w/d) (Stuttgart) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e542441'>Stellenangebot: Senior Project Manager (m/w/d) (Stuttgart) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 
